corrected alignment

--- a/Transitor/static/css/style.css
+++ b/Transitor/static/css/style.css
@@ -379,10 +379,10 @@ body{
 	width: 15%;
 }
 #result table td:nth-child(2){
-	width: 30%;
+	width: 25%;
 }
 #result table td:nth-child(4){
-	width: 35%;
+	width: 30%;
 }
 .platform{
 	text-align: right;
@@ -392,11 +392,12 @@ body{
 	font-size: 60px;
 }
 .time{
-	padding-left: 10px;
+	text-align: right;
+	padding-right: 70px;
 }
 .date{
-	text-align: left;
-	padding-left: 10px;
+	text-align: right;
+	padding-right: 70px;
 	padding-bottom: 30px;
 }
 .important{
